@@ -4,7 +4,7 @@ import java.util.ArrayList;
 import java.util.List;
 
 /**
- * @Title:
+ * @Title: 内存溢出测试
  * @Description:
  * @Author: wb-ccl670938
  * @CreateTime: 2020-07-01 10:32
@@ -18,17 +18,22 @@ public class OOMTest {
     }
 
     /**
-     * -Xms5M -Xmx5M
+     * -Xms5M -Xmx5M -XX:+PrintGCDetails -XX:+HeapDumpOnOutOfMemoryError -XX:HeapDumpPath=D:\jvmOomDump.dump
+     * 加上以上参数在发生内存溢出时会导出dump
      * @throws InterruptedException
      */
     public void heapOom() throws InterruptedException {
-        byte[] bytes = new byte[256];
-        List<byte[]> list = new ArrayList<>();
+        Student student;
+        List<Student> list = new ArrayList<>();
         int i = 0;
         for(;;) {
-            //System.out.println(i++);//47427
-            list.add(bytes);
-            Thread.sleep(1000);
+            System.out.println(i++);
+            list.add(new Student());
+            Thread.sleep(100);
         }
+    }
+
+    static class Student {
+        byte[] bytes = new byte[1024];
     }
 }
